--- a/subpages/regulations.html
+++ b/subpages/regulations.html
@@ -18,7 +18,7 @@
     <!-- Navigation Menu -->
     <header>
       <a class="site-logo">
-          <img class="logo" src="../images/OsakaAlumniLogo.png">
+          <img class="logo" src="../images/OsakaAlumniLogo.png" alt="">
       </a>
         <nav class="site-nav">
             <ul>
@@ -73,6 +73,7 @@
         <p class="footer-credit">Website design by <a href="#">Minoru Hirose</a></p>
 <!--                <p class="footer-disclaimer">Any reference to associated logos is for demonstration purposes only and is not intended to refer to any actual organization or event.</p>-->
         <p class="footer-legal">&copy; 2020 阪大物理系同窓会. All rights reserved.</p>
+        </div>
     </div>
     </footer>
     
