Fixed a link error

--- a/subpages/organization.html
+++ b/subpages/organization.html
@@ -27,7 +27,7 @@
 <!--				<li><a href="#">議事録</a></li>-->
                 <li><a href="#">組織</a></li>
                 <li><a href="regulations.html">会則</a></li>
-                <li><a href="#">リンク</a></li>
+                <li><a href="links.html">リンク</a></li>
 <!--                <li><a href="#">コンタクト</a></li>-->
 			</ul>
         </nav>
