--- a/subpages/events.html
+++ b/subpages/events.html
@@ -18,7 +18,7 @@
     <!-- Navigation Menu -->
     <header>
       <a class="site-logo">
-          <img class="logo" src="../images/OsakaAlumniLogo.png">
+          <img class="logo" src="../images/OsakaAlumniLogo.png" alt="">
       </a>
         <nav class="site-nav">
             <ul>
