--- a/subpages/events/seminar_party_2020Feb.html
+++ b/subpages/events/seminar_party_2020Feb.html
@@ -18,7 +18,7 @@
     <!-- Navigation Menu -->
     <header>
       <a class="site-logo">
-          <img class="logo" src="../../images/OsakaAlumniLogo.png">
+          <img class="logo" src="../../images/OsakaAlumniLogo.png" alt="">
       </a>
         <nav class="site-nav">
             <ul>
@@ -38,7 +38,7 @@
 
         <!-- Artwork -->
         <section class="each_page">
-			<h2>物理系同窓会交流会・懇親会のお知らせ</h3>
+			<h2>物理系同窓会交流会・懇親会のお知らせ</h2>
 			<p>拝啓</p>
 			<p>厳寒の折、お健やかに新年を迎えられたことと存じます。このたび理学部物理系同窓会では、下記の通り交流会（講演会、総会と懇親会）を開催いたします。１月３１日（必着）までにメールにて参加登録をお願い致します。皆様のご参加を心よりお待ちしております。</p>
 			<p align="right">敬具</p>
@@ -48,8 +48,8 @@
 			<h3>○理学部同窓会講演会（無料）</h3>
 			<p>　 開催日：2020 年 2月 15日（土）</p>
 			<p>　 時間：14:00～16:30</p>
-			<p>　 場所：大阪大学理学J 棟2 階　南部陽一郎ホール
-			<p>　 講演者と演題：
+            <p>　 場所：大阪大学理学J 棟2 階　南部陽一郎ホール</p>
+            <p>　 講演者と演題：</p>
 			<p>　 　 唐山英明氏（博士1999年）（富山県立大学 工学部電子情報工学科 教授）<br>
 				　　  「生体情報の計測とその応用事例」</p>
 			<p>　 　 熊田高之氏（修士1995年）（原子力機構 階層構造研究グループリーダー）<br>
@@ -101,6 +101,7 @@
         <p class="footer-credit">Website design by <a href="#">Minoru Hirose</a></p>
 <!--                <p class="footer-disclaimer">Any reference to associated logos is for demonstration purposes only and is not intended to refer to any actual organization or event.</p>-->
         <p class="footer-legal">&copy; 2020 阪大物理系同窓会. All rights reserved.</p>
+        </div>
     </div>
     </footer>
     
