--- a/subpages/organization.html
+++ b/subpages/organization.html
@@ -18,7 +18,7 @@
     <!-- Navigation Menu -->
     <header>
       <a class="site-logo">
-          <img class="logo" src="../images/OsakaAlumniLogo.png">
+          <img class="logo" src="../images/OsakaAlumniLogo.png" alt="">
       </a>
         <nav class="site-nav">
             <ul>
@@ -50,7 +50,7 @@
 				<td>会計幹事</td><td>鳴海　康雄</td><td>新・修43回</td><td>会計</td>
 				</tr>
 				<tr>
-				<td rowspan=200>常任幹事</td><td>赤井　久純</td><td>新・修19回</td><td>元幹事長、監査</td>
+				<td rowspan="200">常任幹事</td><td>赤井　久純</td><td>新・修19回</td><td>元幹事長、監査</td>
 				</tr>
 				<tr>
 				<td>中田　博保</td><td>新・修21回</td><td>前幹事長、監査</td>
@@ -89,7 +89,7 @@
 				<td>境家　達弘</td><td>新・修47回</td><td>懇親会、渉外</td>
 				</tr>
 				<tr>
-				<td>廣瀬　穰</td><td>新・修55回</td><td>広報、渉外</td>
+				<td>廣瀬　穣</td><td>新・修55回</td><td>広報、渉外</td>
 				</tr>
 				<tr>
 				<td>長峯　健太郎</td><td>現職</td><td>宇宙地球科学専攻長</td>
@@ -114,6 +114,7 @@
         <p class="footer-credit">Website design by <a href="#">Minoru Hirose</a></p>
 <!--                <p class="footer-disclaimer">Any reference to associated logos is for demonstration purposes only and is not intended to refer to any actual organization or event.</p>-->
         <p class="footer-legal">&copy; 2020 阪大物理系同窓会. All rights reserved.</p>
+        </div>
     </div>
     </footer>
     
