--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation Menu -->
     <header>
       <a class="site-logo">
-          <img class="logo" src="images/OsakaAlumniLogo.png">
+          <img class="logo" src="images/OsakaAlumniLogo.png" alt="">
       </a>
         <nav class="site-nav">
             <ul>
@@ -41,7 +41,7 @@
             <article class="artwork">
                 <div class="artwork-piece">
                     <figure>
-                    	<img src="images/alumni.jpg">
+                    	<img src="images/alumni.jpg" alt="">
 						<h5  style="text-align:right">イラスト：今田真一（新35回)</h5>
 					</figure>
                 </div>
@@ -72,20 +72,20 @@
             <ul class="footer-social">
                 <li>
                     <a href="#">
-                        <img class="social-default" src="images/social-facebook.png">
-                        <img class="social-hover" src="images/social-facebook-hover.png">
+                        <img class="social-default" src="images/social-facebook.png" alt="">
+                        <img class="social-hover" src="images/social-facebook-hover.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img class="social-default" src="images/social-pinterest.png">
-                        <img class="social-hover" src="images/social-pinterest-hover.png">
+                        <img class="social-default" src="images/social-pinterest.png" alt="">
+                        <img class="social-hover" src="images/social-pinterest-hover.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img class="social-default" src="images/social-twitter.png">
-                        <img class="social-hover" src="images/social-twitter-hover.png">
+                        <img class="social-default" src="images/social-twitter.png" alt="">
+                        <img class="social-hover" src="images/social-twitter-hover.png" alt="">
                     </a>
                 </li>
             </ul>
