--- a/subpages/organization.html
+++ b/subpages/organization.html
@@ -38,62 +38,62 @@
 
         <!-- Artwork -->
         <section class="each_page">
-			<h3>組織 (2019年5月3日現在)</h3>
+			<h3>組織 (2020年4月1日現在)</h3>
 			<table>
 				<tr>
 				<th>役職</th><th>名前</th><th>卒業回</th><th>役割等</th>
 				</tr>
 				<tr>
-				<td>幹事長</td><td>萩原　政幸</td><td>新・修33回</td><td></td>
+				<td>幹事長</td><td>萩原　政幸</td><td>1984年 33回</td><td></td>
 				</tr>
 				<tr>
-				<td>会計幹事</td><td>鳴海　康雄</td><td>新・修43回</td><td>会計</td>
+				<td>会計幹事</td><td>鳴海　康雄</td><td>1994年 43回</td><td>会計</td>
 				</tr>
 				<tr>
-				<td rowspan="200">常任幹事</td><td>赤井　久純</td><td>新・修19回</td><td>元幹事長、監査</td>
+				<td rowspan="200">常任幹事</td><td>赤井　久純</td><td>1970年 19回</td><td>元幹事長、監査</td>
 				</tr>
 				<tr>
-				<td>中田　博保</td><td>新・修21回</td><td>前幹事長、監査</td>
+				<td>中田　博保</td><td>1972年 21回</td><td>前幹事長、監査</td>
 				</tr>
 				<tr>
-				<td>岸本　忠史</td><td>新・修23回</td><td>渉外(退職者担当)</td>
+				<td>岸本　忠史</td><td>1974年 23回</td><td>渉外(退職者担当)</td>
 				</tr>
 				<tr>
-				<td>能町　正治</td><td>新・修26回</td><td>広報、渉外</td>
+				<td>能町　正治</td><td>1977年 26回</td><td>広報、渉外</td>
 				</tr>
 				<tr>
-				<td>松多　健策</td><td>新・修27回</td><td>広報(名簿引継)、渉外</td>
+				<td>松多　健策</td><td>1978年 27回</td><td>広報(名簿引継)、渉外</td>
 				</tr>
 				<tr>
-				<td>植田　千秋</td><td>新・修30回</td><td>庶務、渉外</td>
+				<td>植田　千秋</td><td>1981年 30回</td><td>庶務、渉外</td>
 				</tr>
 				<tr>
-				<td>野海　博之</td><td>新・修33回</td><td>懇親会、渉外</td>
+				<td>野海　博之</td><td>1984年 33回</td><td>懇親会、渉外</td>
 				</tr>
 				<tr>
-				<td>寺田　健太郎</td><td>新・修37回</td><td>広報、渉外</td>
+				<td>寺田　健太郎</td><td>1988年 37回</td><td>宇宙地球科学専攻長、広報、渉外</td>
 				</tr>
 				<tr>
-				<td>兼村　晋哉</td><td>新・修39回</td><td>庶務、渉外</td>
+				<td>兼村　晋哉</td><td>1990年 39回</td><td>庶務、渉外</td>
 				</tr>
 				<tr>
-				<td>花咲　徳亮</td><td>新・修40回</td><td>物理学専攻長、渉外</td>
+				<td>花咲　徳亮</td><td>1991年 40回</td><td>物理学専攻長、渉外</td>
 				</tr>
 				<tr>
-				<td>豊田　岐聡</td><td>新・修42回</td><td>庶務、渉外</td>
+				<td>豊田　岐聡</td><td>1993年 42回</td><td>庶務、渉外</td>
 				</tr>
 				<tr>
-				<td>吉田　斉</td><td>新・修45回</td><td>懇親会、渉外</td>
+				<td>吉田　斉</td><td>1996年 45回</td><td>懇親会、渉外</td>
 				</tr>
 				<tr>
-				<td>境家　達弘</td><td>新・修47回</td><td>懇親会、渉外</td>
+				<td>境家　達弘</td><td>1998年 47回</td><td>懇親会、渉外</td>
 				</tr>
 				<tr>
-				<td>廣瀬　穣</td><td>新・修55回</td><td>広報、渉外</td>
+				<td>廣瀬　穣</td><td>2006年 55回</td><td>広報、渉外</td>
 				</tr>
-				<tr>
+<!--				<tr>
 				<td>長峯　健太郎</td><td>現職</td><td>宇宙地球科学専攻長</td>
-				</tr>
+				</tr>-->
 			</table>
 			<h3>事務局／連絡先</h3>
 			<h4>〒460-0043<br>
