--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="artwork-description">
                 	<h2 class="artwork-title">大阪大学理学部大学院理学研究科物理系同窓会</h2>
                     <p class="artwork-text">理学部物理学科、理学研究科物理学専攻、および宇宙地球科学専攻の卒業生で構成される同窓会のウェブサイトです。本同窓会は在校生との交流も強くサポートしています。</p>
-                    <a class="see-more" href="#">幹事長のことば</a>
+                    <a class="see-more" href="subpages/messages.html">幹事長のことば</a>
                 </div>
             </article>
         </section>
@@ -69,7 +69,7 @@
     <!-- Site Footer -->
     <footer>
     <div class="footer-content">
-            <ul class="footer-social">
+<!--            <ul class="footer-social">
                 <li>
                     <a href="#">
                         <img class="social-default" src="images/social-facebook.png" alt="">
@@ -88,7 +88,7 @@
                         <img class="social-hover" src="images/social-twitter-hover.png" alt="">
                     </a>
                 </li>
-            </ul>
+            </ul>-->
             <div class="footer-info">
                 <p class="footer-credit">Website design by <a href="#">Minoru Hirose</a></p>
 <!--                <p class="footer-disclaimer">Any reference to associated logos is for demonstration purposes only and is not intended to refer to any actual organization or event.</p>-->
