--- a/subpages/messages.html
+++ b/subpages/messages.html
@@ -39,7 +39,8 @@
         <!-- Artwork -->
         <section class="each_page">
 			<h2>幹事長のことば</h2>
-			<p>私は平成30年度から物理系同窓会の幹事長を務めております、理学研究科附属先端強磁場科学研究センターの萩原政幸です。物理系同窓会幹事一同は、本同窓会がよりよい組織になるために日々活動を行っております。大阪大学理学部物理学科、大学院理学研究科物理学専攻もしくは宇宙地球科学専攻（総して物理系）を卒業された方々は、全員が物理系同窓会の会員になります。一般に同窓会は卒業生(OBOG)の交流の場を提供するものですが、本物理系同窓会はそれだけにとどまらず、現役の学生（物理学科学生と大学院学生）と卒業生の交流の場を提供したいと考えております。このために年に一度交流会（講演会と懇親会）を開き、卒業生の交流のみならず、卒業生と現役学生の交流を図ろうとしております。講演会では卒業生の中から数名にお願いして講演をしていただき、卒業生の幅広い活躍を現役の学生にも知ってもらいたいと考えています。また、懇親会は卒業生と学生の交流の場になるように切望しています。そのために、ささやかな試みですが、同窓会費を払っていただいた学生には懇親会1回無料招待券をつけています。人との出会いがあって将来が決まることがあります。学生には先輩にいろいろ質問したり、話を聞いたりして将来設計に生かしてほしいと思いますし、卒業生にはいろいろな可能性を有する学生の存在を知っていただきたいと思っております。同窓会組織が活発なものになるには皆さんのご協力が必要です。どうぞよろしくお願いいたします。</p>
+			<p>　私は平成30年度から物理系同窓会の幹事長を務めております、理学研究科附属先端強磁場科学研究センターの萩原政幸です。物理系同窓会幹事一同は、本同窓会がよりよい組織になるために日々活動を行っております。<br>
+            　大阪大学理学部物理学科、大学院理学研究科物理学専攻もしくは宇宙地球科学専攻（総して物理系）を卒業された方々は、全員が物理系同窓会の会員になります。一般に同窓会は卒業生(OBOG)の交流の場を提供するものですが、本物理系同窓会はそれだけにとどまらず、現役の学生（物理学科学生と大学院学生）と卒業生の交流の場を提供したいと考えております。このために年に一度交流会（講演会と懇親会）を開き、卒業生の交流のみならず、卒業生と現役学生の交流を図ろうとしております。講演会では卒業生の中から数名にお願いして講演をしていただき、卒業生の幅広い活躍を現役の学生にも知ってもらいたいと考えています。また、懇親会は卒業生と学生の交流の場になるように切望しています。そのために、ささやかな試みですが、同窓会費を払っていただいた学生には懇親会1回無料招待券をつけています。人との出会いがあって将来が決まることがあります。学生には先輩にいろいろ質問したり、話を聞いたりして将来設計に生かしてほしいと思いますし、卒業生にはいろいろな可能性を有する学生の存在を知っていただきたいと思っております。同窓会組織が活発なものになるには皆さんのご協力が必要です。どうぞよろしくお願いいたします。</p>
 			<p align="right">同窓会幹事長 萩原 政幸</p>
         </section>
 		
