--- a/subpages/organization.html
+++ b/subpages/organization.html
@@ -99,9 +99,8 @@
 			<h4>〒460-0043<br>
 				大阪府豊中市待兼山町1-1<br>
 				大阪大学理学研究科附属　先端強磁場研究センター<br>
-				鳴海康雄<br>
 				Tel: 06-6850-6684<br>
-				Mail: narumi@ahmf.sci.osaka-u.ac.jp<br>
+				Mail: alumni-phys@ahmf.sci.osaka-u.ac.jp<br>
 			</h4>
         </section>
 		
